--- a/mods/entityculling.pw.toml
+++ b/mods/entityculling.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "7cb54ebe04e236b474470bd30caef310282aa486"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/entityculling-neoforge-1.7.4-mc1.21.jar"
 
 [update]
 [update.curseforge]
