--- a/mods/rustic-delight.pw.toml
+++ b/mods/rustic-delight.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "3d9d4dd2130ba5c635234ead0b2f887fa4fcd0ab"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/rusticdelight-neoforge-1.21-1.4.2.jar"
 
 [update]
 [update.curseforge]
