--- a/resourcepacks/whimscape.pw.toml
+++ b/resourcepacks/whimscape.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "c486d46b7f79d3aa187e7288385858220c37b05b"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Whimscape_1.20.2-1.21.5_r3.zip"
 
 [update]
 [update.curseforge]
