--- a/mods/bad-wither-no-cookie-reloaded.pw.toml
+++ b/mods/bad-wither-no-cookie-reloaded.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "ece7a31501bc3080e1c4263689c26e9154809b2d"
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/bwncr-neoforge-1.21.1-3.20.3.jar"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
