--- a/mods/create-design-n-decor.pw.toml
+++ b/mods/create-design-n-decor.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "4d9b15c2395868c93a214281ced82e21b74f46ef"
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Design-n-Decor-1.21.1-2.0.2.jar"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
