--- a/mods/create-let-the-adventure-begin.pw.toml
+++ b/mods/create-let-the-adventure-begin.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Let The Adventure Begin"
-filename = "create_ltab-2.7.5.jar"
+filename = "create_ltab-2.7.8.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "1e58f2437ee5ef4589c709a2fa5577977f18c40a"
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/create_ltab-2.7.5.jar"
+hash = "2b639702747470973fefc141163a728a995d33ea"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 6596584
+file-id = 6678900
 project-id = 1007872
