--- a/resourcepacks/whimscape.pw.toml
+++ b/resourcepacks/whimscape.pw.toml
@@ -1,13 +1,13 @@
 name = "Whimscape"
-filename = "Whimscape_1.20.2-1.21.5_r3.zip"
+filename = "Whimscape_1.20.2-1.21.6_r1.zip"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "c486d46b7f79d3aa187e7288385858220c37b05b"
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Whimscape_1.20.2-1.21.5_r3.zip"
+hash = "6fbaa27b715c0891168e7bd0db1462ec7e5af8fe"
+mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 6550310
+file-id = 6661674
 project-id = 682643
