--- a/mods/structory.pw.toml
+++ b/mods/structory.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "103531c57bacd3816e00b0c828a16c3d2ea7480e"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Structory_1.21.x_v1.3.11.jar"
 
 [update]
 [update.curseforge]
