--- a/mods/create-structures-arise.pw.toml
+++ b/mods/create-structures-arise.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "4a1408c076e0a3e9f4670149ab5f1e7f2cc3323b"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/create_structures_arise-160.33.32-neoforge-1.21.1.jar"
 
 [update]
 [update.curseforge]
