--- a/mods/entityculling.pw.toml
+++ b/mods/entityculling.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "449435a11ce43e21067eca6a6169c41d4a53f290"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/entityculling-neoforge-1.8.0-mc1.21.jar"
 
 [update]
 [update.curseforge]
