--- a/resourcepacks/whimscape-exploration.pw.toml
+++ b/resourcepacks/whimscape-exploration.pw.toml
@@ -1,11 +1,11 @@
 name = "Whimscape + Exploration"
-filename = "Whimscape x Exploration v1.0.zip"
+filename = "Whimscape_x_Exploration_v1.0.zip"
 side = "both"
 
 [download]
 hash-format = "sha1"
 hash = "ad80c9d21c0b641699f40f87ca64bc173bf05ca7"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Whimscape_x_Exploration v1.0.zip"
 
 [update]
 [update.curseforge]
