--- a/resourcepacks/whimscape.pw.toml
+++ b/resourcepacks/whimscape.pw.toml
@@ -5,7 +5,7 @@ side = "both"
 [download]
 hash-format = "sha1"
 hash = "6fbaa27b715c0891168e7bd0db1462ec7e5af8fe"
-mode = "metadata:curseforge"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Whimscape_1.20.2-1.21.6_r1.zip"
 
 [update]
 [update.curseforge]
