--- a/mods/create-dreams-desires.pw.toml
+++ b/mods/create-dreams-desires.pw.toml
@@ -3,12 +3,6 @@ filename = "DnDesires-1.21.1-2.1b-BETA.jar"
 side = "both"
 
 [download]
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/DnDesires-1.21.1-2.1b-BETA.jar"
 hash-format = "sha1"
 hash = "9e2d404b87d55114fbd402f2b31667565f3b0d69"
-mode = "metadata:curseforge"
-
-[update]
-[update.curseforge]
-file-id = 6669820
-project-id = 864781
