--- a/mods/create-let-the-adventure-begin.pw.toml
+++ b/mods/create-let-the-adventure-begin.pw.toml
@@ -3,12 +3,6 @@ filename = "create_ltab-2.7.8.jar"
 side = "both"
 
 [download]
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/create_ltab-2.7.8.jar"
 hash-format = "sha1"
 hash = "2b639702747470973fefc141163a728a995d33ea"
-mode = "metadata:curseforge"
-
-[update]
-[update.curseforge]
-file-id = 6678900
-project-id = 1007872
