--- a/save_tehse/mods/eggs-cobblemon-addon.pw.toml
+++ b/save_tehse/mods/eggs-cobblemon-addon.pw.toml
@@ -3,7 +3,7 @@ filename = "eggs-cobblemon-addon-0.7.jar"
 side = "both"
 
 [download]
-url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/"
+url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/eggs-cobblemon-addon-0.7.jar"
 hash-format = "sha1"
 hash = "f0c010aec1f7a8d10046d8efccbd1b335df6f065"
 mode = "metadata:curseforge"
