--- a/mods/create-structures-arise-160-33-32-neoforge-1-21-1-jar.pw.toml
+++ b/mods/create-structures-arise-160-33-32-neoforge-1-21-1-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Create: Structures Arise"
+name = "create_structures_arise-160.33.32-neoforge-1.21.1.jar"
 filename = "create_structures_arise-160.33.32-neoforge-1.21.1.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/create_structures_arise-160.33.32-neoforge-1.21.1.jar"
