--- a/mods/cute-companions-ducks-0-0-2-neoforge-1-21-1-jar.pw.toml
+++ b/mods/cute-companions-ducks-0-0-2-neoforge-1-21-1-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Cute Companions: Ducks"
+name = "cute_companions_ducks-0.0.2-neoforge-1.21.1.jar"
 filename = "cute_companions_ducks-0.0.2-neoforge-1.21.1.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/cute_companions_ducks-0.0.2-neoforge-1.21.1.jar"
