--- a/mods/design-n-decor-1-21-1-2-0-2-jar.pw.toml
+++ b/mods/design-n-decor-1-21-1-2-0-2-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Create: Design n' Decor"
+name = "Design-n-Decor-1.21.1-2.0.2.jar"
 filename = "Design-n-Decor-1.21.1-2.0.2.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Design-n-Decor-1.21.1-2.0.2.jar"
