--- a/mods/dndesires-1-21-1-2-1b-beta-jar.pw.toml
+++ b/mods/dndesires-1-21-1-2-1b-beta-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Create: Dreams n' Desires"
+name = "DnDesires-1.21.1-2.1b-BETA.jar"
 filename = "DnDesires-1.21.1-2.1b-BETA.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/DnDesires-1.21.1-2.1b-BETA.jar"
