--- a/mods/eggs-cobblemon-addon-0-7-jar.pw.toml
+++ b/mods/eggs-cobblemon-addon-0-7-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Eggs - Cobblemon Addon"
+name = "eggs-cobblemon-addon-0.7.jar"
 filename = "eggs-cobblemon-addon-0.7.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/eggs-cobblemon-addon-0.7.jar"
