--- a/mods/mythsandlegends-neoforge-1-7-2-hotfix-jar.pw.toml
+++ b/mods/mythsandlegends-neoforge-1-7-2-hotfix-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Myths and Legends [Cobblemon Sidemod]"
+name = "MythsAndLegends-neoforge-1.7.2-Hotfix.jar"
 filename = "MythsAndLegends-neoforge-1.7.2-Hotfix.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/MythsAndLegends-neoforge-1.7.2-Hotfix.jar"
