--- a/mods/structory-1-21-x-v1-3-11-jar.pw.toml
+++ b/mods/structory-1-21-x-v1-3-11-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Structory"
+name = "Structory_1.21.x_v1.3.11.jar"
 filename = "Structory_1.21.x_v1.3.11.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/Structory_1.21.x_v1.3.11.jar"
