--- a/mods/bwncr-neoforge-1-21-1-3-20-3-jar.pw.toml
+++ b/mods/bwncr-neoforge-1-21-1-3-20-3-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Bad Wither No Cookie - Reloaded"
+name = "bwncr-neoforge-1.21.1-3.20.3.jar"
 filename = "bwncr-neoforge-1.21.1-3.20.3.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/bwncr-neoforge-1.21.1-3.20.3.jar"
