--- a/mods/entityculling-neoforge-1-8-0-mc1-21-jar.pw.toml
+++ b/mods/entityculling-neoforge-1-8-0-mc1-21-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Entity Culling Fabric/Forge"
+name = "entityculling-neoforge-1.8.0-mc1.21.jar"
 filename = "entityculling-neoforge-1.8.0-mc1.21.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/entityculling-neoforge-1.8.0-mc1.21.jar"
