--- a/mods/skinlayers3d-neoforge-1-8-0-mc1-21-jar.pw.toml
+++ b/mods/skinlayers3d-neoforge-1-8-0-mc1-21-jar.pw.toml
@@ -1,6 +1,5 @@
-name = "Skin Layers 3D (Fabric/Forge)"
+name = "skinlayers3d-neoforge-1.8.0-mc1.21.jar"
 filename = "skinlayers3d-neoforge-1.8.0-mc1.21.jar"
-side = "both"
 
 [download]
 url = "https://kamiljaba.github.io/extra_needed_mods/mayestview1.0/skinlayers3d-neoforge-1.8.0-mc1.21.jar"
